better slicing explanation

--- a/WK03.ipynb
+++ b/WK03.ipynb
@@ -23,12 +23,23 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!wget -q https://github.com/DM-GY-9103-2024S-R/9103-utils/raw/main/src/io_utils.py"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "uHIQDMJ-WTei"
       },
       "outputs": [],
       "source": [
-        "import random"
+        "import random\n",
+        "\n",
+        "from io_utils import print_list_with_index"
       ]
     },
     {
@@ -63,8 +74,8 @@
         "  n = random.randint(0, 2000)\n",
         "  list_of_randoms.append(n)\n",
         "\n",
-        "print(list_of_randoms)\n",
-        "print(len(list_of_randoms))"
+        "# print the length of the list and its members\n",
+        "print(len(list_of_randoms), list_of_randoms)"
       ]
     },
     {
@@ -89,6 +100,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Zero-based Indexing\n",
+        "\n",
+        "The first index of a list is $0$, and for a list of length $n$, its last index will be $n - 1$."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -96,30 +116,7 @@
       },
       "outputs": [],
       "source": [
-        "list_of_randoms[3]"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8sYq0tQj6z0e"
-      },
-      "source": [
-        "### Python has a very useful function for sorting lists."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "DJlfGTZZ6SJt"
-      },
-      "outputs": [],
-      "source": [
-        "my_sorted_list = sorted(list_of_randoms)\n",
-        "\n",
-        "print(my_sorted_list)\n",
-        "print(len(my_sorted_list))"
+        "list_of_randoms[0], list_of_randoms[9]"
       ]
     },
     {
@@ -128,7 +125,15 @@
         "id": "zIJjJ8rx_W8s"
       },
       "source": [
-        "### With a sorted list we can print the 5 smallest and 5 largest elements"
+        "### Slicing\n",
+        "\n",
+        "Python has a built-in mechanism called *slicing* for getting sub-sections of a list.\n",
+        "\n",
+        "Instead of a single index, we specify two values in the square bracket, separated by a $:$, to specify where our slice starts and ends.\n",
+        "\n",
+        "The second index in the bracket is not included in the slice.\n",
+        "\n",
+        "If the first index is blank, the slice will start at index $0$, and if the second index is blank it will go until the end of the list."
       ]
     },
     {
@@ -139,8 +144,17 @@
       },
       "outputs": [],
       "source": [
-        "print(my_sorted_list[:5])\n",
-        "print(my_sorted_list[-5:])"
+        "# The list\n",
+        "print_list_with_index(list_of_randoms)\n",
+        "\n",
+        "# First 5 items\n",
+        "print(list_of_randoms[:5])\n",
+        "\n",
+        "# Last 5 items\n",
+        "print(list_of_randoms[-5:])\n",
+        "\n",
+        "# The 5 items at indexes [3] - [7]\n",
+        "print(list_of_randoms[3:8])"
       ]
     },
     {
@@ -176,39 +190,8 @@
         "  \"grades\": [90, 80, 60],\n",
         "  \"attendance\": [True, True, False, True, True],\n",
         "  \"final grade\": \"A\"\n",
-        "}"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "-LBHNWgd9t3k"
-      },
-      "outputs": [],
-      "source": [
+        "}\n",
         "my_info"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "k2sCp_La1PiP"
-      },
-      "source": [
-        "### Iterating over key/values"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Mkw7MQWg1SYW"
-      },
-      "outputs": [],
-      "source": [
-        "for key, val in my_info.items():\n",
-        "  print(\"key\", key, \"has value\", val)"
       ]
     },
     {
@@ -233,34 +216,24 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
-        "id": "oJFC6YXM1zXp"
+        "id": "k2sCp_La1PiP"
       },
-      "outputs": [],
       "source": [
-        "# Sum of grades\n",
-        "sum_grades = sum(my_grades)\n",
-        "print(sum_grades)"
+        "### Iterating over items"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "_RdS3XvI11jv"
+        "id": "Mkw7MQWg1SYW"
       },
       "outputs": [],
       "source": [
-        "# Average attendance\n",
-        "print(my_info[\"attendance\"])\n",
-        "\n",
-        "sum_attendance = sum(my_info[\"attendance\"])\n",
-        "print(sum_attendance)\n",
-        "\n",
-        "avg_attendance = sum_attendance / len(my_info[\"attendance\"])\n",
-        "print(avg_attendance)"
+        "for key, val in my_info.items():\n",
+        "  print(\"key\", key, \"has value\", val)"
       ]
     },
     {
@@ -523,7 +496,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
